# contributors

./: .gitignore  README.md  dev-docker-compose.yml  pyproject.toml
docs/: CHANGELOG.md  Diagram.drawio  TODO.md
src/: app.py  main.py
src/core/: app.py  config.py  db.py  enums.py
src/routers/: auth.py  issues.py  projects.py
src/schemas/: auth.py  issues.py
src/templates/: base.html
src/templates/auth/: login.html  register.html
src/templates/issues/: issues.html  issues_delete.html  issues_new.html  issues_update.html
