[project]
name = "contributors"
version = "0.1.0"
description = "Web App to find projects / issues to (team-up and) contribute"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard-no-fastapi-cloud-cli]>=0.120.0",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.10.1",
    "pymongo>=4.15.3",
]
